--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,12 @@
         "php": ">=5.2.0",
         "ext-curl": "*",
         "ext-json": "*"
+    },
+    "license": "proprietary",
+    "extra": {
+        "branch-alias":
+        {
+            "dev-master": "1.x-dev"
+        }
     }
 }
