--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         },
         {
             "name": "Josh Worden",
-            "email": "josh.worden@cygnus.com"
+            "email": "solocommand@gmail.com"
         }
     ],
     "require": {
